if(NOT ${MICM_GPU_TYPE} STREQUAL "None")
  add_subdirectory(cuda)
endif()
if(MICM_ENABLE_KOKKOS)
  add_subdirectory(kokkos)
endif()
add_subdirectory(constraint)
add_subdirectory(process)
add_subdirectory(solver)
add_subdirectory(system)
add_subdirectory(util)
add_subdirectory(version)
if(MICM_ENABLE_OPENMP)
  add_subdirectory(openmp)
endif()